fixes logo on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,8 +3,8 @@
 }
 
 .logo-header {
-  max-width: 16em;
-  height: auto;
+  max-width: 20em;
+  margin: auto;
 }
 
 .has-primary-color {
